--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "watch": "npm-watch"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.1",
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -28,7 +29,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.2.4",
     "morgan": "~1.9.1",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "nodemon": "^3.1.4"
   },
   "devDependencies": {
     "npm-watch": "^0.11.0"
